Fix icon alignment in tooltips

--- a/src/apps/content-editor/src/app/views/ItemEdit/Meta/ItemSettings/settings/CanonicalTag.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Meta/ItemSettings/settings/CanonicalTag.less
@@ -1,6 +1,7 @@
 .CanonicalTag {
   label {
     display: flex;
+    align-items: center;
   }
   .settings {
     & > * {
